Center-align logo text on mobile. Fixes #39.

--- a/assets/stylesheets/layout/_masthead.scss
+++ b/assets/stylesheets/layout/_masthead.scss
@@ -17,12 +17,15 @@
 .site-description {
 	line-height: 1.2;
 	margin: 0;
+	text-align: center;
 }
 
 .site-title {
-	@include font-size(1.6);
+	@include font-size(1.4);
 	font-weight: 500;
+	margin-left: -10%;
 	text-transform: uppercase;
+	width: 120%;
 
 	a {
 		color: $color__primary;
@@ -36,6 +39,7 @@
 
 .site-description {
 	color: $color__neutral;
+	display: inline-block;
 	@include font-size(1.6);
 	font-family: $font__display;
 	position: relative;
@@ -43,32 +47,28 @@
 	.easy-as-svg-icon-fleuron {
 		height: 50px;
 		position: absolute;
-		top: -8px;
+		top: -12px;
 		width: 50px;
 	}
 
 	.easy-as-svg-icon-fleuron:nth-of-type(1) {
-		left: -30px;
+		left: -55px;
 	}
 
 	.easy-as-svg-icon-fleuron:nth-of-type(2) {
-		right: -30px;
+		right: -55px;
 		transform: scaleX(-1);
 	}
 }
 
 // Mobile only bits.
 @include mobile {
-	.justonetree-logo {
-		display: inline-block;
-		max-height: 75px;
-		vertical-align: middle;
+	.site-branding {
+		text-align: center;
 	}
 
-	.justonetree-title-text {
-		display: inline-block;
-		vertical-align: middle;
-		width: calc(100% - 81px);
+	.justonetree-logo {
+		max-height: 75px;
 	}
 }
 
@@ -110,15 +110,6 @@
 
 	.justonetree-title-text {
 		margin-top: -5px;
-	}
-
-	.site-title {
-		@include font-size(1.2);
-	}
-
-	.site-description {
-		@include font-size(1.6);
-		font-family: $font__display;
 	}
 
 	.main-navigation {
